changes to rotate opensearch passowrkd
Signed-off-by: Jay Sharma <jsharma@progress.com>

--- a/components/automate-backend-elasticsidecar/habitat/config/elastic_sidecar.toml
+++ b/components/automate-backend-elasticsidecar/habitat/config/elastic_sidecar.toml
@@ -2,12 +2,12 @@ admin_username = "{{bind.opensearch.first.cfg.admin_username}}"
 admin_password = "{{bind.opensearch.first.cfg.admin_password}}"
 ssl_verify = {{cfg.ssl_verify}}
 log_debug = {{cfg.log_debug}}
-opensearch_ca = "/hab/svc/automate-ha-elasticsidecar/config/certificates/MyRootCA.pem"
-admin_key = "/hab/svc/automate-ha-elasticsidecar/config/certificates/odfe-admin.key"
-admin_cert = "/hab/svc/automate-ha-elasticsidecar/config/certificates/odfe-admin.pem"
-securityconfig_path = "/hab/svc/automate-ha-elasticsidecar/data/securityconfig"
+opensearch_ca = "/hab/svc/automate-ha-opensearch/config/certificates/root-ca.pem"
+admin_key = "/hab/svc/automate-ha-opensearch/config/certificates/admin-key.pem"
+admin_cert = "/hab/svc/automate-ha-opensearch/config/certificates/admin.pem"
+securityconfig_path = "/hab/svc/automate-ha-opensearch/data/securityconfig"
 opensearch_ip = "{{cfg.opensearch_ip}}"
 opensearch_port = {{cfg.opensearch_port}}
 wait_period = {{cfg.wait_period}}
 java_home = "{{pkgPathFor "chef/automate-openjdk"}}"
-tool_path = "{{pkgPathFor "chef/automate-ha-opensearch"}}/os/plugins/opensearch-security/tools/"
+tool_path = "{{pkgPathFor "chef/automate-ha-opensearch"}}/os/plugins/opensearch-security/tools"
