--- a/components/automate-ui/package.json
+++ b/components/automate-ui/package.json
@@ -107,10 +107,8 @@
     "tslint": "^6.1.3",
     "tslint-defocus": "^2.0.6",
     "typescript": "~4.0.7",
-    "wallaby-webpack": "^3.9.16"
-  },
-  "config": {
-    "unsafe-perm": true
+    "wallaby-webpack": "^3.9.16",
+    "@types/node": "14.14.35"
   },
   "resolutions": {
     "@types/node": "14.14.35"
