Adding changes for refresh hab testing
Signed-off-by: Yashvi Jain <yashvi.jain@progress.com>

--- a/.expeditor/build.habitat.yml
+++ b/.expeditor/build.habitat.yml
@@ -21,4 +21,4 @@ studio_secrets:
     path: secret/a2/a2ha/opensearch
     field: node1-key.pem    
   HAB_FALLBACK_CHANNEL:
-    value: "stable"
+    value: "refresh2024q1"
