Increasied start time for members.
Signed-off-by: sreepuramsudheer <ssudheer@progress.com>

--- a/components/automate-cs-oc-erchef/habitat/config/sys.config
+++ b/components/automate-cs-oc-erchef/habitat/config/sys.config
@@ -313,13 +313,15 @@
              {max_count, {{cfg.sql.pool_max_size}}},
              {init_count, {{cfg.sql.pool_init_size}}},
              {queue_max, {{cfg.sql.pool_queue_max}}},
-             {start_mfa, {sqerl_client, start_link, []}}
+             {start_mfa, {sqerl_client, start_link, []}},
+             {member_start_timeout, {2, min}}
             ],
             [{name, chef_depsolver},
              {max_count, {{cfg.depsolver.pool_max_size}}},
              {init_count, {{cfg.depsolver.pool_init_size}}},
              {queue_max, {{cfg.depsolver.pool_queue_max}}},
-             {start_mfa, {chef_depsolver_worker, start_link, []}}
+             {start_mfa, {chef_depsolver_worker, start_link, []}},
+             {member_start_timeout, {2, min}}
             ]
         ]},
         {metrics_module, folsom_metrics}
