Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -15,6 +15,7 @@ http {
                     '"$request" $status "$request_time" $body_bytes_sent '
                     '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" "$http_x_chef_version" "$http_x_ops_sign" "$http_x_ops_userid" "$http_x_ops_timestamp" "$http_x_ops_content_hash" $request_length';
 
+  access_log /var/log/nginx/access.log;
   server_names_hash_bucket_size {{cfg.ngx.http.server_names_hash_bucket_size}};
 
   sendfile {{cfg.ngx.http.sendfile}};
@@ -56,7 +57,7 @@ http {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
-      access_log off;
+      access_log on;
       allow 127.0.0.1;
       deny all;
     }
