--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -60,7 +60,7 @@ http {
                   '"$request" $status "$request_time" $body_bytes_sent '
                   '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
 
-  access_log {{ cfg.ngx.http.access_log }} chef;
+  access_log /var/log/nginx/access.log;
 
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
@@ -341,7 +341,7 @@ http {
     location /nginx_status {
       stub_status;
 
-      access_log off;
+      access_log on;
       allow 127.0.0.1;
       deny all;
     }
