Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -57,7 +57,11 @@ http {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
+      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
+      } else{
+        access_log off;
+      }
       allow 127.0.0.1;
       deny all;
     }
