--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -341,7 +341,11 @@ http {
     location /nginx_status {
       stub_status;
 
+      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
+      } else{
+        access_log off;
+      }
       allow 127.0.0.1;
       deny all;
     }
