Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -60,7 +60,7 @@ http {
                   '"$request" $status "$request_time" $body_bytes_sent '
                   '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
 
-  access_log /var/log/nginx/access.log;
+  access_log /var/log/nginx/access.log combined;
 
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
@@ -338,16 +338,16 @@ http {
       add_header X-Content-Type-Options "nosniff" always;
     }
 
-    location /nginx_status {
-      stub_status;
-
-      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
-      access_log on;
-      } else{
-        access_log off;
-      }
-      allow 127.0.0.1;
-      deny all;
+map $sys_ngx_http_include_x_forwarded_for $access_log_enabled {
+    default off;
+    true    on;
+    } 
+  location /nginx_status {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        stub_status;
+        access_log /var/log/nginx/nginx_status_access.log combined if=$access_log_enabled;
+        allow 127.0.0.1;
+        deny all;
     }
 
     include {{../pkg.svc_config_path}}/*location.conf;
