Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -342,15 +342,16 @@ map $sys_ngx_http_include_x_forwarded_for $access_log_enabled {
     default off;
     true    on;
     } 
+server {
   location /nginx_status {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         stub_status;
         access_log /var/log/nginx/nginx_status_access.log combined if=$access_log_enabled;
+
         allow 127.0.0.1;
         deny all;
     }
-
-    include {{../pkg.svc_config_path}}/*location.conf;
+}    include {{../pkg.svc_config_path}}/*location.conf;
     {{/if}}
   }
   {{/each}}
