--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -57,7 +57,7 @@ http {
     default off;
     true    on;
     }
-    
+server {
   location /nginx_status {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         stub_status;
@@ -66,6 +66,7 @@ http {
         allow 127.0.0.1;
         deny all;
     }
+}
   upstream automate-cs-oc-erchef {
 {{~#eachAlive bind.automate-cs-oc-erchef.members as |member|}}
    server 127.0.0.1:{{member.cfg.http-port}};
