--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -351,7 +351,8 @@ server {
         allow 127.0.0.1;
         deny all;
     }
-}    include {{../pkg.svc_config_path}}/*location.conf;
+}    
+include {{../pkg.svc_config_path}}/*location.conf;
     {{/if}}
   }
   {{/each}}
