Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -15,7 +15,7 @@ http {
                     '"$request" $status "$request_time" $body_bytes_sent '
                     '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" "$http_x_chef_version" "$http_x_ops_sign" "$http_x_ops_userid" "$http_x_ops_timestamp" "$http_x_ops_content_hash" $request_length';
 
-  access_log /var/log/nginx/access.log combined;
+  access_log /var/log/nginx/access.log;
   server_names_hash_bucket_size {{cfg.ngx.http.server_names_hash_bucket_size}};
 
   sendfile {{cfg.ngx.http.sendfile}};
@@ -58,13 +58,16 @@ http {
     true    on;
     }
 server {
-  location /nginx_status {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        stub_status;
-        access_log /var/log/nginx/nginx_status_access.log combined if=$access_log_enabled;
-
-        allow 127.0.0.1;
-        deny all;
+    listen 127.0.0.1:{{cfg.service.status_port}};
+    location /nginx_status {
+      stub_status on;
+      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
+      access_log on;
+      } else{
+        access_log off;
+      }
+      allow 127.0.0.1;
+      deny all;
     }
 }
   upstream automate-cs-oc-erchef {
