--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -60,8 +60,7 @@ http {
                   '"$request" $status "$request_time" $body_bytes_sent '
                   '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
 
-  access_log /var/log/nginx/access.log combined;
-
+  access_log /var/log/nginx/access.log;
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
   proxy_buffers {{ cfg.ngx.http.proxy_buffers }};
@@ -343,13 +342,15 @@ map $sys_ngx_http_include_x_forwarded_for $access_log_enabled {
     true    on;
     } 
   location /nginx_status {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        stub_status;
-        access_log /var/log/nginx/nginx_status_access.log combined if=$access_log_enabled;
-
-        allow 127.0.0.1;
-        deny all;
-    }
+      stub_status;
+      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
+      access_log on;
+      } else{
+        access_log off;
+      }
+      allow 127.0.0.1;
+      deny all;
+  }
     include {{../pkg.svc_config_path}}/*location.conf;
     {{/if}}
   }
