Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -336,10 +336,9 @@ http {
       add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
       add_header X-Content-Type-Options "nosniff" always;
     }
-  
-  
-  location /nginx_status {
-      stub_status;
+    location /nginx_status {
+      stub_status on;
+      access_log off;
       if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
       } else{
@@ -347,7 +346,9 @@ http {
       }
       allow 127.0.0.1;
       deny all;
+    }
   }
+
     include {{../pkg.svc_config_path}}/*location.conf;
     {{/if}}
   }
