--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -49,8 +49,7 @@ http {
 -- Habitat doesnt support redis based dark launch and ban for now
 --   config.set_maint_refresh_interval(600)
 --   config.set_ban_refresh_interval(600)
---   config.set_default_org(false)
-  ';
+--   config.set_default_org(false)';
 # Listen for local requests to the stub_status module.
 server {
     listen 127.0.0.1:{{cfg.service.status_port}};
