Nginx config for X-Forwarded-For Header
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -337,7 +337,7 @@ http {
       add_header X-Content-Type-Options "nosniff" always;
     }
     location /nginx_status {
-      stub_status on;
+      stub_status;
       access_log off;
       if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
