--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -55,7 +55,7 @@ http {
 server {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
-      stub_status;
+      stub_status on;
       if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
       } else{
