--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -337,8 +337,7 @@ http {
       add_header X-Content-Type-Options "nosniff" always;
     }
     location /nginx_status {
-      stub_status;
-      access_log off;
+      stub_status on;
       if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
       access_log on;
       } else{
