--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -60,7 +60,6 @@ http {
                   '"$request" $status "$request_time" $body_bytes_sent '
                   '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
 
-  access_log /var/log/nginx/access.log;
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
   proxy_buffers {{ cfg.ngx.http.proxy_buffers }};
@@ -340,7 +339,7 @@ http {
       stub_status;
 
       if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
-      access_log on;
+        access_log /var/log/nginx/access.log chef;
       } else{
         access_log off;
       }
