--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -15,7 +15,6 @@ http {
                     '"$request" $status "$request_time" $body_bytes_sent '
                     '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" "$http_x_chef_version" "$http_x_ops_sign" "$http_x_ops_userid" "$http_x_ops_timestamp" "$http_x_ops_content_hash" $request_length';
 
-  access_log /var/log/nginx/access.log;
   server_names_hash_bucket_size {{cfg.ngx.http.server_names_hash_bucket_size}};
 
   sendfile {{cfg.ngx.http.sendfile}};
@@ -56,8 +55,8 @@ server {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
-      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
-      access_log on;
+      if {{cfg.sys.ngx.http.include_x_forwarded_for}}{
+        access_log /var/log/nginx/access.log chef;
       } else{
         access_log off;
       }
