--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -55,7 +55,8 @@ server {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
-      if {{cfg.sys.ngx.http.include_x_forwarded_for}}{
+      set $x_forwarded_for "{{cfg.sys.ngx.http.include_x_forwarded_for}}"
+      if $x_forwarded_for == "true"{
         access_log /var/log/nginx/access.log chef;
       } else{
         access_log off;
