--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -337,8 +337,8 @@ http {
     }
     location /nginx_status {
       stub_status;
-
-      if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
+      set $x_forwarded_for "{{cfg.sys.ngx.http.include_x_forwarded_for}}"
+      if $x_forwarded_for == "true"{
         access_log /var/log/nginx/access.log chef;
       } else{
         access_log off;
