changes in nginx.conf and chef_https.conf
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -60,8 +60,6 @@ http {
                   '"$request" $status "$request_time" $body_bytes_sent '
                   '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
 
-  access_log {{ cfg.ngx.http.access_log }} chef;
-
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
   proxy_buffers {{ cfg.ngx.http.proxy_buffers }};
@@ -339,9 +337,14 @@ http {
     }
 
     location /nginx_status {
-      stub_status;
-
-      access_log off;
+      stub_status on;
+      set $x_forwarded_for "{{cfg.sys.ngx.http.include_x_forwarded_for}}";
+      if ($x_forwarded_for = "true") {
+        access_log /var/log/nginx/access.log chef;
+      }
+      else {
+        access_log off;
+      }
       allow 127.0.0.1;
       deny all;
     }
