--- a/components/automate-cs-nginx/habitat/config/chef_https.conf
+++ b/components/automate-cs-nginx/habitat/config/chef_https.conf
@@ -25,7 +25,10 @@
 
     proxy_set_header Host $http_host; # http_host preserves port # if present
     proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    
+    if {{cfg.sys.ngx.http.include_x_forwarded_for}} == "true"{
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     proxy_set_header X-Forwarded-Proto https;
 
