--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -15,6 +15,10 @@ http {
                     '"$request" $status "$request_time" $body_bytes_sent '
                     '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" "$http_x_chef_version" "$http_x_ops_sign" "$http_x_ops_userid" "$http_x_ops_timestamp" "$http_x_ops_content_hash" $request_length';
 
+  log_format chef '$remote_user [$time_local]  '
+                  '"$request" $status "$request_time" $body_bytes_sent '
+                  '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
+
   server_names_hash_bucket_size {{cfg.ngx.http.server_names_hash_bucket_size}};
 
   sendfile {{cfg.ngx.http.sendfile}};
@@ -56,7 +60,13 @@ http {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
-      access_log off;
+      set $x_forwarded_for "{{cfg.sys.ngx.http.include_x_forwarded_for}}";
+      if ($x_forwarded_for = "true") {
+        access_log /var/log/nginx/access.log chef;
+      }
+      else {
+        access_log off;
+      }
       allow 127.0.0.1;
       deny all;
     }
