--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -60,7 +60,7 @@ http {
     listen 127.0.0.1:{{cfg.service.status_port}};
     location /nginx_status {
       stub_status on;
-      set $x_forwarded_for "{{cfg.sys.ngx.http.include_x_forwarded_for}}";
+      set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for}}";
       if ($x_forwarded_for = "true") {
         access_log /var/log/nginx/access.log chef;
       }
