--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -337,17 +337,17 @@ http {
     }
 
     location /nginx_status {
-      stub_status on;
-      set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for}}";
-      if ($x_forwarded_for = "true") {
+    stub_status on;
+    set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for}}";
+    if ($x_forwarded_for = "true") {
         access_log /var/log/nginx/access.log chef;
-      }
-      else {
-        access_log off;
-      }
-      allow 127.0.0.1;
-      deny all;
     }
+    if ($x_forwarded_for != "true") {
+        access_log off;
+    }
+    allow 127.0.0.1;
+    deny all;
+}
 
     include {{../pkg.svc_config_path}}/*location.conf;
     {{/if}}
