fixing error in automate-cs-nginx
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -61,14 +61,14 @@ http {
     location /nginx_status {
       stub_status on;
       set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for}}";
-      if ($x_forwarded_for = "true") {
+    if ($x_forwarded_for = "true") {
         access_log /var/log/nginx/access.log chef;
-      }
-      else {
+    }
+    if ($x_forwarded_for != "true") {
         access_log off;
-      }
-      allow 127.0.0.1;
-      deny all;
+    }
+    allow 127.0.0.1;
+    deny all;
     }
   }
 
