--- a/components/chef-ui-library/tsconfig.json
+++ b/components/chef-ui-library/tsconfig.json
@@ -14,7 +14,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "types": [
+      "jest"
+    ]
   },
   "include": [
     "src",
