--- a/components/automate-ui/package.json
+++ b/components/automate-ui/package.json
@@ -96,7 +96,7 @@
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "karma-safari-launcher": "^1.0.0",
     "ng2-mock-component": "^0.2.0",
     "protractor": "^7.0.0",
@@ -106,6 +106,7 @@
     "sass-lint": "^1.13.1",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "tslint-defocus": "^2.0.6",
     "typescript": "~4.0.7",
     "wallaby-webpack": "^3.9.16",
     "@types/node": "14.14.35"
