--- a/components/chef-ui-library/package.json
+++ b/components/chef-ui-library/package.json
@@ -21,8 +21,7 @@
     "docs": "typedoc --entryPointStrategy expand ./src",
     "lint": "npm run lint.ts && npm run lint.sass",
     "lint.ts": "tslint -p tsconfig.json",
-    "lint.sass": "node node_modules/sass-lint/bin/sass-lint.js -v -q",
-    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions"
+    "lint.sass": "node node_modules/sass-lint/bin/sass-lint.js -v -q"
   },
   "author": "Chef Software, Inc. <info@chef.io>",
   "license": "UNLICENSED",
