changing access.log path
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -62,7 +62,7 @@ http {
       stub_status on;
       set $x_forwarded_for "{{cfg.nginx.http_include_x_forwarded_for}}";
     if ($x_forwarded_for = "true") {
-        access_log /var/log/nginx/access.log chef;
+        access_log /var/log/access.log chef;
     }
     if ($x_forwarded_for != "true") {
         access_log off;
