changing config file to see log entry
Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

--- a/components/automate-load-balancer/habitat/config/nginx.conf
+++ b/components/automate-load-balancer/habitat/config/nginx.conf
@@ -56,9 +56,10 @@ http {
   scgi_temp_path {{ pkg.svc_var_path }}/scgi_temp_path;
   uwsgi_temp_path {{ pkg.svc_var_path }}/uwsgi;
 
-  log_format chef '$remote_user [$time_local]  '
-                  '"$request" $status "$request_time" $body_bytes_sent '
-                  '"$http_referer" "$http_user_agent" "$upstream_addr" "$upstream_status" "$upstream_response_time" $request_length';
+  log_format chef '$remote_addr - $remote_user [$time_local] '
+                    '"$request" $status "$request_time" $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent" "$upstream_addr" '
+                    '"$upstream_status" "$upstream_response_time" $request_length';
 
   proxy_intercept_errors on;
   proxy_buffering {{ cfg.ngx.http.proxy_buffering }};
