upgraded to github.com/nats-io/nats-server/v2@v2.9.23 (#8423)
* upgraded to github.com/nats-io/nats-server/v2@v2.9.23

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* pushing code after running go mod tidy

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding licence in license_acout,moving jwt to v2 and package changes in event-gateway and event-service

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* fixing build error in authenticator.go

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding replace in mod file

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* major changes in event-gateway and event serice and solving pipeline:license scout

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* solving pipeline:license scout

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding license to go.uber.org/automaxprocs

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding go.uber.org/automaxprocs in go.mod

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding go.uber.org/automaxprocs in license scout for checking other components

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* removing go.uber.org/automaxprocs from exceptions

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* solving pipelines

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* solving pipelines

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* solving pipelines

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding go.uber.org/automaxprocs@latest in go.mod

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* making nat-server as indirect in go.mod

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* changes

Signed-off-by: Aishwarya Aishwarya <aaishwar@progress.com>

* adding licence

Signed-off-by: Aishwarya Aishwarya <a

--- a/.license_scout.yml
+++ b/.license_scout.yml
@@ -796,6 +796,9 @@ fallbacks:
     - name: golang.org/x/image
       license_id: BSD-3-Clause
       license_content: https://raw.githubusercontent.com/golang/go/master/LICENSE
+    - name: github.com/nats-io/jwt/v2
+      license_id: Apache-2.0
+      license_content: https://github.com/nats-io/jwt/blob/main/LICENSE
     - name: golang.org/x/mobile
       license_id: BSD-3-Clause
       license_content: https://raw.githubusercontent.com/golang/go/master/LICENSE
@@ -838,6 +841,10 @@ fallbacks:
     - name: github.com/soheilhy/cmux
       license_id: Apache-2.0
       license_content: https://raw.githubusercontent.com/soheilhy/cmux/master/LICENSE
+    - name: go.uber.org/automaxprocs
+      license_id: MIT
+      license_content: https://raw.githubusercontent.com/uber-go/tools/master/LICENSE  
+   
   habitat:
     - name: chef/mlsa
       license_id: Chef-MLSA
@@ -897,7 +904,7 @@ fallbacks:
       license_content: https://raw.githubusercontent.com/ruby/net-telnet/master/LICENSE.txt
     - name: unf
       license_id: BSD-2-Clause
-      license_content: https://raw.githubusercontent.com/knu/ruby-unf/master/LICENSE
+      license_content: https://raw.githubusercontent.com/knu/ruby-unf/master/LICENSE       
 
 exceptions:
   habitat:
@@ -1027,3 +1034,4 @@ exceptions:
   nodejs:
     - name: jschardet
       reason: Exception made by Chef Legal
+      
